[project]
name = "monopoly-tracker"
version = "0.1.0"
description = "A web application to track the monopoly game and player statistics"
authors = [
    {name = "ravi-pinapaka",email = "ravikumar.psvk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "monopoly_tracker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
